# FlowZone

./: .gitignore  CMakeLists.txt  FlowZone.jucer  Spec_FlowState_Looper.md  Spec_FlowZone_Looper.md  Spec_FlowZone_Looper1.0.md  Spec_FlowZone_Looper1.1.md  Spec_FlowZone_Looper1.3 backup.md  Spec_FlowZone_Looper1.3.md  Spec_JamState_Looper.md  agents.md  agents1.1.md  all_beads.json  beads_list.txt  diff_report.html  dump_beads.py  fix_beads.py  fix_dependencies.py  plan.md
.beads/: beads.db  issues.jsonl  last-touched
Spec/: Audio_Engine_Specifications.md  FlowZone_Risk_Assessment.md  Pre_Build_Assessment_2.md  Pre_Build_Assessment_4.md  Spec_FlowZone_Looper1.6.md  Spec_FlowZone_V2_Prototype.md  Spec_Samsara_Looper2.1.md  UI_Layout_Reference.md
Spec archive/: Spec_FlowZone_Looper1.4.md
Spec versions/: Mobile_Layout_Reference.md  Spec_FlowZone_Looper1.6.md
analysis/: Pre_Build_Assessment_11.md  Pre_Build_Assessment_13.md  Pre_Build_Assessment_3.md  Pre_Build_Assessment_4.md  Pre_Build_Assessment_6.md  Pre_Build_Assessment_9.md  revision_analysis.md  spec_1.4_analysis.md
archive/v1/: FlowZone.jucer  TESTING.md  beads_final.txt  generate_diff.py
archive/v1/Spec/: Audio_Engine_Specifications.md  UI_Layout_Reference.md
archive/v1/Spec archive/: Spec_FlowZone_Looper1.2.md  Spec_FlowZone_Looper1.5.md
archive/v1/analysis/: Pre_Build_Assessment_1.md  Pre_Build_Assessment_10.md  Pre_Build_Assessment_12.md  Pre_Build_Assessment_5.md  Pre_Build_Assessment_6.md  Pre_Build_Assessment_7.md  Pre_Build_Assessment_8.md  review_analysis.md  spec_diff_1.3_vs_1.4.html  spec_review_analysis.md
archive/v1/scripts/: list_orphans.py
archive/v1/src/engine/: CommandDispatcher.cpp  ConfigManager.cpp  CrashGuard.h  FeatureExtractor.cpp  FlowEngine.cpp  FlowZoneAudioProcessorEditor.cpp  FlowZoneAudioProcessorEditor.h  MicProcessor.cpp  MicProcessor.h  Slot.cpp  Slot.h  TuningManager.h
archive/v1/src/engine/dsp/: ChorusEffect.cpp  CombFilter.cpp  CompressorEffect.cpp  CompressorEffect.h  DubDelay.h  LimiterEffect.cpp  MulticombFilter.cpp  ReverseEffect.cpp  ReverseEffect.h  TapeStopEffect.cpp  ZapDelay.cpp  ZapDelay.h
archive/v1/src/engine/server/: WebSocketServer.h
archive/v1/src/engine/session/: SessionStateManager.cpp  SessionStateManager.h
archive/v1/src/engine/state/: StateBroadcaster.h
archive/v1/src/web_client/: index.html  package-lock.json  package.json
archive/v1/src/web_client/src/: App.test.tsx
archive/v1/tests/engine/: CrashGuard_Test.cpp  RetrospectiveLooper_AudioRouting_Test.cpp  SessionStateManager_Integration_Test.cpp  SessionStateManager_Test.cpp  StateBroadcaster_Test.cpp  TransportService_Test.cpp  test_auto_merge.cpp  test_drums.cpp  test_filters.cpp  test_performance_fx.cpp  test_synth.cpp
docs/: AUDIO_FLOW_SCHEMA.md  PHASE_7_SETUP.md  TESTING_PLAN.md
libs/civetweb/include/: civetweb.c
scripts/: build_ci.sh  build_standalone.sh  build_vst3.sh  verify_websocket.js
src/: BottomPerformancePanel.h  DiskWriter.h  FXTabBottom.h  FXTabTop.h  FlowZoneLogger.h  LabeledKnob.h  LevelMeter.cpp  LevelMeter.h  Main.cpp  MainComponent.cpp  MainComponent.h  MiddleMenuPanel.cpp  MiddleMenuPanel.h  MixerTabComponents.h  ModeTabBottom.h  ModeTabTop.h  RetrospectiveBuffer.cpp  RetrospectiveBuffer.h  Riff.h  RiffHistoryPanel.cpp  RiffHistoryPanel.h  RiffPlaybackEngine.cpp  RiffPlaybackEngine.h  SamsaraLogger.h  SandwichFramework.h  SelectionGrid.h  SessionManager.h  StandaloneFXEngine.h  TopContentPanel.h  WaveformPanel.cpp  WaveformPanel.h  XYPad.cpp  XYPad.h  ZigzagLayerGrid.h
src/engine/: AudioThreadUtils.h  CommandDispatcher.cpp  CommandDispatcher.h  CommandQueue.h  ConfigManager.h  CrashGuard.h  DiskWriter.cpp  DiskWriter.h  DrumEngine.cpp  DrumEngine.h  DrumVoice.cpp  DrumVoice.h  FeatureExtractor.h  FileLogger.h  FlowEngine.cpp  FlowEngine.h  FlowZoneAudioProcessor.cpp  FlowZoneAudioProcessor.h  FlowZoneAudioProcessorEditor.cpp  FlowZoneAudioProcessorEditor.h  MicProcessor.cpp  MicProcessor.h  RetrospectiveBuffer.cpp  RetrospectiveBuffer.h  SessionStateManager.cpp  SessionStateManager.h  Slot.cpp  Slot.h  StateBroadcaster.cpp  StateBroadcaster.h  SynthEngine.cpp  SynthEngine.h  SynthSound.h  SynthVoice.cpp  SynthVoice.h  TuningManager.cpp
src/engine/dsp/: BitcrusherEffect.cpp  BitcrusherEffect.h  ChorusEffect.h  CombFilter.h  DelayEffect.cpp  DelayEffect.h  DistortionEffect.cpp  DistortionEffect.h  DubDelay.cpp  FilterBase.h  LimiterEffect.h  MulticombFilter.h  NoiseEffect.cpp  NoiseEffect.h  PhaserEffect.cpp  PhaserEffect.h  StateVariableFilter.cpp  StateVariableFilter.h  StutterEffect.cpp  StutterEffect.h  TapeStopEffect.h
src/engine/server/: WebSocketServer.cpp  WebSocketServer.h
src/engine/session/: SessionStateManager.cpp  SessionStateManager.h
src/engine/state/: AppState.cpp  AppState.h  StateBroadcaster.cpp  StateBroadcaster.h
src/engine/transport/: TransportService.cpp  TransportService.h
src/host/: PluginHostMain.cpp  PluginHostProcess.h
src/shared/protocol/: ErrorCodes.h  schema.h  schema.ts
src/web_client/: package-lock.json  tsconfig.json  vite.config.ts
src/web_client/src/: App.tsx  index.css
src/web_client/src/api/: MockStateProvider.ts  WebSocketClient.ts
src/web_client/src/components/: ResponsiveContainer.tsx
src/web_client/src/components/layout/: Header.tsx  MainLayout.tsx  Navigation.tsx  PerformanceSurface.tsx
src/web_client/src/components/settings/: SettingsPanel.tsx  (+1 more)
src/web_client/src/context/: StateProvider.tsx
src/web_client/src/views/: AdjustView.tsx  JamManagerView.tsx  MixerView.tsx  ModeView.tsx  PlayView.tsx
temp/: build_log.txt  create_new_fx_beads.sh  create_pitchmod_beads.sh  create_samsara_beads.sh  rename.sh
temp_build/: info.plist
temp_build/ModuleCache.noindex/: Session.modulevalidation
tests/engine/: ConfigManager_Test.cpp  DiskWriter_Tiers_Test.cpp  Integration_CommandFlow_Test.cpp  RetrospectiveBuffer_Test.cpp  StateBroadcaster_Protocol_Test.cpp  main_test.cpp  phase1_test.cpp  test_delays.cpp  test_distortion_noise.cpp  test_dynamics_mod.cpp  test_mic_processor.cpp  test_microtuning.cpp
(+566 files in other folders)
